SystemUI: QS: Add tile to show volume panel
Stallix: Adapt for 10

Change-Id: Ic583c24e304d1edc903127237fc9eb5c7eeb7e4d
JIRA: CYAN-6721

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -167,4 +167,7 @@
 
     <string name="screenshot_error_title">Screenshot invalid</string>
     <string name="screenrecord_error_title">Screen record invalid</string>
+
+    <!-- Volume panel QS tile -->
+    <string name="quick_settings_volume_panel_label">Volume panel</string>
 </resources>
